--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,296 @@
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==20.3.0
-backcall==0.2.0
-bleach==3.3.0
-catboost==0.25
-certifi==2020.12.5
-cffi==1.14.5
+absl-py==1.1.0
+agora-token-builder==1.0.0
+altair==4.2.2
+amqp==1.4.9
+aniso8601==7.0.0
+anyjson==0.3.3
+apns2==0.7.2
+arabic-reshaper==3.0.0
+asgiref==3.2.10
+asn1crypto==1.5.1
+astunparse==1.6.3
+attrs==21.2.0
+backports.entry-points-selectable==1.1.0
+beautifulsoup4==4.10.0
+billiard==3.3.0.23
+blinker==1.6
+bootstrap4==0.1.0
+boto==2.49.0
+branca==0.5.0
+Brotli==1.0.9
+bs4==0.0.1
+cachetools==5.0.0
+catboost==1.1.1
+celery==3.1.26.post2
+cert-core==2.1.10
+cert-schema==3.0.3
+certifi==2020.6.20
+cffi==1.15.0
+charset-normalizer==2.0.7
 click==7.1.2
+clickclick==20.10.2
+cloudinary==1.30.0
 colorama==0.4.4
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
-Flask==1.1.2
+config==0.5.1
+ConfigArgParse==1.5.3
+connexion==2.12.0
+contourpy==1.0.7
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==36.0.1
+cssselect2==0.7.0
+cycler==0.11.0
+decorator==5.1.0
+defusedxml==0.7.1
+diff-match-patch==20200713
+distlib==0.3.3
+dj-database-url==0.5.0
+dj-static==0.0.6
+dj3-cloudinary-storage==0.0.6
+Django==3.1.1
+django-allauth==0.47.0
+django-appconf==1.0.5
+django-autoslug==1.9.8
+django-blog==0.1.1
+django-blog-it==0.3.1
+django-bootstrap==0.2.4
+django-bootstrap-form==3.4
+django-bootstrap-modal-forms==2.2.0
+django-bootstrap3==21.1
+django-bootstrap4==21.1
+django-categories-i18n==2.0
+django-celery==3.3.1
+django-ckeditor==6.2.0
+django-cleanup==5.2.0
+django-cors-headers==3.10.1
+django-crispy-forms==1.9.2
+django-css==2.3.1
+django-currentuser==0.5.3
+django-environ==0.10.0
+django-filter==1.1.0
+django-fluent-blogs==3.0
+django-fluent-contents==3.0
+django-fluent-utils==3.0.1
+django-fontawesome==1.0
+django-forms-bootstrap==3.1.0
+django-heroku==0.3.1
+django-html==0.1.0
+django-html5==1.0.0
+django-import-export==2.7.1
+django-jazzmin==2.4.9
+django-jquery==3.1.0
+django-js-asset==1.2.2
+django-material-admin==1.8.6
+django-model-utils==4.2.0
+django-mptt==0.13.4
+django-notification==1.3.3
+django-parler==2.3
+django-polymorphic==3.1.0
+django-push-notifications==2.0.0
+django-renderpdf==4.0.0
+django-rest-swagger==2.2.0
+django-simple-pagination==1.3
+django-slug-preview==2.0.1
+django-storages==1.12.3
+django-tag-parser==3.2
+django-taggit==2.0.0
+django-template-analyzer==2.0
+django-templated-mail==1.1.1
+django-user-accounts==3.1.0
+django-user-profile==1.0.3
+django-utils-six==2.0
+django-widget-tweaks==1.4.9
+djangorestframework==3.13.1
+djangorestframework-filters==0.11.1
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+entrypoints==0.4
+et-xmlfile==1.1.0
+feedparser==6.0.8
+filelock==3.3.0
+Flask==2.0.3
 Flask-Cors==3.0.10
+Flask-PyMongo==2.3.0
+flatbuffers==1.12
+folium==0.12.1.post1
+fonttools==4.39.3
+frozendict==2.1.3
+future==0.18.2
+gast==0.4.0
+geocoder==1.38.1
+geographiclib==1.52
+geoip2==2.9.0
+geopy==2.2.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==2.9.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+graphene==2.1.9
+graphene-django==2.15.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+graphviz==0.20.1
+grpcio==1.47.0
 gunicorn==20.0.4
-imbalanced-learn==0.8.0
-imblearn==0.0
-importlib-metadata==3.4.0
-ipykernel==5.5.0
-ipython==7.16.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-itsdangerous==1.1.0
-jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.0.1
+h2==2.6.2
+h5py==3.7.0
+heroku==0.1.4
+hpack==3.0.0
+html5lib==1.1
+http-ece==1.1.0
+humanfriendly==10.0
+hyper==0.7.0
+hyperframe==3.2.0
+idna==3.3
+importlib-metadata==4.10.0
+importlib-resources==5.12.0
+inflection==0.5.1
+isodate==0.6.1
+itsdangerous==2.0.1
+itypes==1.2.0
+Jinja2==3.0.3
+joblib==1.2.0
 jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.11
-jupyter-console==6.2.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kiwisolver==1.3.1
-MarkupSafe==1.1.1
-matplotlib==3.3.4
-mistune==0.8.4
-nbclient==0.5.2
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
-notebook==6.2.0
-numpy==1.19.5
-packaging==20.9
-pandas
-pandocfilters==1.4.3
-parso==0.8.1
-pickleshare==0.7.5
-Pillow==8.1.0
-plotly==4.14.3
-prometheus-client==0.9.0
-prompt-toolkit==3.0.16
-pycparser==2.20
-Pygments==2.8.0
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz
-pywinpty==0.5.7
-pyzmq==22.0.3
-qtconsole==5.0.2
-QtPy==1.9.0
-retrying==1.3.3
-scikit-learn==0.24.1
-scipy==1.5.4
-seaborn==0.11.1
-Send2Trash==1.5.0
-Six
-terminado==0.9.2
-testpath==0.4.4
-threadpoolctl==2.1.0
-tornado==6.1
-traitlets==4.3.3
-typing-extensions==3.7.4.3
-wcwidth==0.2.5
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+kombu==3.0.37
+libclang==14.0.1
+lxml==4.7.1
+Markdown==3.3.6
+markdown-it-py==2.2.0
+MarkupPy==1.14
+MarkupSafe==2.0.1
+material==0.1
+matplotlib==3.7.1
+maxminddb==2.2.0
+mdurl==0.1.2
+microurl==0.1.1
+mutagen==1.45.1
+mysqlclient==2.0.3
+nltk==3.7
+numpy==1.22.2
+oauthlib==3.1.1
+odfpy==1.4.1
+openapi-codec==1.3.2
+openapi-schema-validator==0.1.5
+opencv-python==4.5.5.64
+openpyxl==3.0.9
+opt-einsum==3.3.0
+oscrypto==1.3.0
+packages==0.1.0
+packaging==21.3
+pafy==0.5.5
+panda==0.3.1
+pandas==1.4.1
+Pillow==9.5.0
+platformdirs==2.4.0
+plotly==5.14.1
+pluggy==1.0.0
+promise==2.3
+protobuf==3.19.4
+psycopg2==2.9.2
+psycopg2-binary==2.8.6
+py==1.11.0
+py-vapid==1.8.2
+pyarrow==11.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydeck==0.8.0
+pydyf==0.6.0
+Pygments==2.14.0
+pyHanko==0.17.2
+pyhanko-certvalidator==0.20.1
+PyJWT==2.3.0
+PyLD==2.0.3
+pymongo==4.0.1
+Pympler==1.0.1
+PyMySQL==1.0.2
+pyparsing==3.0.6
+pypdf==3.7.0
+pyphen==0.14.0
+pypng==0.20220715.0
+pyreadline3==3.3
+pyrsistent==0.18.0
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-decouple==3.5
+python-dotenv==0.19.2
+python-magic==0.4.27
+python-magic-bin==0.4.14
+python-pptx==0.6.21
+python3-openid==3.2.0
+pytube==11.0.2
+pytz==2020.1
+pytz-deprecation-shim==0.1.0.post0
+pywebpush==1.14.0
+PyYAML==5.4.1
+qrcode==7.4.2
+ratelim==0.1.6
+regex==2022.7.9
+reportlab==3.6.6
+requests==2.26.0
+requests-file==1.5.1
+requests-oauthlib==1.3.0
+rich==13.3.3
+rsa==4.8
+Rx==1.6.1
+scikit-learn==1.2.2
+scipy==1.10.1
+semver==3.0.0
+sgmllib3k==1.0.0
+simplejson==3.17.6
+simplekv==0.14.1
+singledispatch==3.7.0
+six==1.16.0
+smmap==5.0.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
+soupsieve==2.3.1
+SpeechRecognition==3.8.1
+sqlparse==0.3.1
+static3==0.7.0
+streamlit==1.12.0
+stripe==2.75.0
+svglib==1.5.1
+tablib==3.2.0
+tenacity==8.2.2
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+termcolor==1.1.0
+text-unidecode==1.3
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+tldextract==3.2.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tox==3.24.4
+tqdm==4.64.0
+typing_extensions==4.3.0
+tzdata==2023.3
+tzlocal==4.3
+uritemplate==4.1.1
+uritools==4.0.1
+urllib3==1.26.7
+validators==0.18.2
+virtualenv==20.10.0
+watchdog==3.0.0
+weasyprint==58.1
 webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wincertstore==0.2
-xgboost==1.3.3
-zipp==3.4.0
+Werkzeug==2.0.2
+whitenoise==5.2.0
+wrapt==1.14.1
+xhtml2pdf==0.2.9
+xlrd==2.0.1
+XlsxWriter==3.0.3
+xlwt==1.3.0
+youtube-dl==2020.12.14
+zipp==3.7.0
+zopfli==0.2.2
